[project]
name = "yt-playlist-downloader"
version = "1.0.0"
description = "A tiny, dependency-free local web app to download YouTube playlists with a live UI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Saad Nadeem" }]
keywords = ["youtube", "yt-dlp", "downloader", "playlist", "ffmpeg"]

[project.urls]
Repository = "https://github.com/saadnadeem/yt-playlist-downloader"
Issues = "https://github.com/saadnadeem/yt-playlist-downloader/issues"

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["downloads"]

[tool.ruff.lint]
# Default rules (Pyflakes + a subset of pycodestyle). Line length is enforced
# loosely because the single-file app embeds an HTML/CSS/JS template.
ignore = ["E501"]
