[project]
name = "youtube-playlist-toolkit"
version = "2.0.0"
description = "A tiny, dependency-free local web app to download YouTube playlists and extract video chapters."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Saad Nadeem" }]
keywords = ["youtube", "yt-dlp", "downloader", "playlist", "chapters", "ffmpeg", "llm"]

[project.urls]
Repository = "https://github.com/Saadnadeem07/youtube-playlist-chapters"
Issues = "https://github.com/Saadnadeem07/youtube-playlist-chapters/issues"

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["downloads"]

[tool.ruff.lint]
# Default rules (Pyflakes + a subset of pycodestyle). Line length is enforced
# loosely because the single-file app embeds an HTML/CSS/JS template.
ignore = ["E501"]
